src/component/input_field/snapshots/envision__component__input_field__tests__view.snap
---
source: src/component/input_field/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│Hello                                 │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
